--- a/create_points.ipynb
+++ b/create_points.ipynb
@@ -104,7 +104,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py12_2",
+   "display_name": "computer_vision",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
